# Macro-Pulse

./: .env-sample  .gitignore  README.md  SECRETS.md  index.html  main.py  pyproject.toml  requirements.txt  test_tickers.py
.agent/workflows/: smart_commit.md
.github/: keepalive
.github/workflows/: daily_report.yml  test_screenshot.yml
src/: cnbc_fetcher.py  data_fetcher.py  main.py  notifier.py  report_generator.py  screenshot_utils.py
src/templates/: report.html
tests/: test_e2e.py  test_screenshot.py  test_tickers.py
